<resources>
    <string name="app_name">Score Tarot</string>
    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>
    <string name="home_title">Tableau de bord</string>
    <string name="home_subtitle">Suivi des parties, des joueurs et des lieux.</string>
    <string name="home_games_count">%1$d partie(s) enregistrée(s)</string>
    <string name="home_players_count">%1$d joueur(s) enregistré(s)</string>
    <string name="new_game_text">Nouvelle partie</string>
    <string name="games_text">Parties</string>
    <string name="players_text">Joueurs</string>
    <string name="settings_text">Paramètres</string>
    <string name="sync_text">Synchronisation</string>
    <string name="nav_home">Accueil</string>
    <string name="nav_new_game">Nouvelle partie</string>
    <string name="nav_games">Parties enregistrées</string>
    <string name="nav_players">Gestion des joueurs</string>
    <string name="nav_settings">Paramètres</string>
    <string name="nav_sync">Synchronisation externe</string>
    <string name="new_game_title">Créer une partie</string>
    <string name="new_game_name_hint">Nom de la partie</string>
    <string name="new_game_players_hint">Nombre de joueurs</string>
    <string name="new_game_rounds_hint">Nombre de manches</string>
    <string name="new_game_location_title">Localisation de la partie</string>
    <string name="new_game_no_location">Aucune localisation enregistrée.</string>
    <string name="new_game_use_location">Utiliser ma position actuelle</string>
    <string name="new_game_create">Lancer la partie</string>
    <string name="new_game_cancel">Annuler</string>
    <string name="new_game_location_format">Lat: %1$.5f | Long: %2$.5f\n%3$s</string>
    <string name="new_game_invalid_input">Veuillez entrer des informations valides.</string>
    <string name="permission_location_denied">La permission de localisation est requise.</string>
    <string name="location_loading">Localisation en cours…</string>
    <string name="games_title">Parties enregistrées</string>
    <string name="games_empty">Aucune partie enregistrée.</string>
    <string name="games_open_map">Ouvrir la carte</string>
    <string name="players_title">Équipes</string>
    <string name="players_empty_game">Veuillez d’abord créer une partie.</string>
    <string name="players_game_format">Partie #%1$d : %2$d joueurs</string>
    <string name="players_name_hint">Nom du joueur</string>
    <string name="manage_players_list_label">Gérer la liste des joueurs</string>
    <string name="players_list_label">Liste des joueurs</string>
    <string name="live_location_text">Localisation en direct</string>
    <string name="players_add">Ajouter</string>
    <string name="players_take_photo">Prendre une photo</string>
    <string name="players_selected">Sélection : %1$s</string>
    <string name="players_empty">Aucun joueur ajouté.</string>
    <string name="players_start_game">Commencer la partie</string>
    <string name="players_full">Nombre de joueurs atteint</string>
    <string name="players_pick_existing">Choisir un joueur existant</string>
    <string name="game_detail_history">Historique des manches</string>
    <string name="game_detail_new_round">Nouvelle manche</string>
    <string name="score_entry_title">Nouvelle manche</string>
    <string name="score_entry_taker">Qui a pris ?</string>
    <string name="score_entry_partner">Appelé (5 joueurs)</string>
    <string name="score_entry_contract">Contrat</string>
    <string name="score_entry_bouts">Nombre de bouts</string>
    <string name="score_entry_bonus">Bonus</string>
    <string name="score_entry_points_hint">Points faits par le preneur</string>
    <string name="score_entry_save">Valider la manche</string>
    <string name="bonus_petit_won">Petit au bout (Gagné)</string>
    <string name="bonus_petit_lost">Petit au bout (Perdu)</string>
    <string name="bonus_poignee_s">Poignée Simple</string>
    <string name="bonus_poignee_d">Double Poignée</string>
    <string name="bonus_poignee_t">Triple Poignée</string>
    <string name="bonus_chelem_won">Chelem réalisé</string>
    <string name="bonus_chelem_ann">Chelem annoncé</string>
    <string name="manage_players_title">Gestion des joueurs</string>
    <string name="player_deleted">Joueur supprimé</string>
    <string name="player_updated">Joueur mis à jour</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_edit">Modifier</string>
    <string name="save">Enregistrer</string>
    <string name="map_title">Carte</string>
    <string name="map_empty">Localisation non disponible.</string>
    <string name="action_refresh">Rafraîchir</string>
    <string name="action_view_map">Voir la carte</string>
    <string name="settings_title">Paramètres</string>
    <string name="settings_about">Application de gestion de scores pour le Tarot français.\n\nProjet de développement mobile.</string>
    <string name="settings_sync_button">Synchroniser maintenant</string>
    <string name="settings_sync_desc">Sauvegardez vos parties et photos sur un serveur distant pour les retrouver sur tous vos appareils.</string>
    <string name="settings_lang_label">Langue / Language</string>
    <string name="settings_lang_button">Français / English</string>
    <string name="settings_lang_dialog_title">Changer la langue</string>
    <string name="sync_success">Synchronisation terminée avec succès.</string>
    <string name="unknown_address">Adresse inconnue</string>
    <string name="game_name_date">Partie du %1$s</string>
    <string name="game_number">Partie #%1$d</string>
    <string name="unknown_location">Lieu inconnu</string>
    <string name="game_deleted">Partie supprimée</string>
    <string name="round_details_title">Détails de la manche</string>
    <string name="round_detail_taker">Preneur : %1$s</string>
    <string name="round_detail_contract">Contrat : %1$s</string>
    <string name="round_detail_bouts">Bouts : %1$d</string>
    <string name="round_detail_points">Points faits : %1$.1f (Cible: %2$d)</string>
    <string name="round_detail_bonus">Bonus : %1$s</string>
    <string name="round_detail_score">Score : %1$d</string>
    <string name="none">Aucun</string>
    <string name="dialog_photo_message">Prendre une photo pour ce joueur ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="photo">Photo</string>
    <string name="taken_by">Pris par %1$s</string>
    <string name="clear_data_text">Effacer toutes les données</string>
    <string name="clear_data_title">Attention</string>
    <string name="clear_data_message">Voulez-vous vraiment supprimer toutes les données ?</string>
    <string name="clear_data_positive">Tout supprimer</string>
    <string name="clear_data_success">Données effacées</string>
    <string name="cancel">Annuler</string>
    <string name="back_text">Retour</string>
</resources>